# highwayhash

./: .gitignore  .travis.yml  BUILD  CMakeLists.txt  CONTRIBUTING  Makefile  README  README.md  code_annotation.h  highway_tree_hash.cc  highway_tree_hash.h  highwayhash.3  scalar_highway_tree_hash.cc  scalar_highway_tree_hash.h  scalar_sip_hash.cc  scalar_sip_hash.h  scalar_sip_tree_hash.cc  scalar_sip_tree_hash.h  sip_hash.cc  sip_hash.h  sip_hash_main.cc  sip_tree_hash.cc  sip_tree_hash.h  sse41_highway_tree_hash.cc  sse41_highway_tree_hash.h  sse41_sip_hash.cc  sse41_sip_hash.h  state_helpers.h  test_exports.sh  types.h  vec.h  vec2.h
c/: highwayhash.c  highwayhash.h  highwayhash_test.c
highwayhash/: arch_specific.cc  arch_specific.h  benchmark.cc  c_bindings.cc  c_bindings.h  code_annotation.h  compiler_specific.h  data_parallel.h  data_parallel_benchmark.cc  data_parallel_test.cc  endianess.h  example.cc  hh_avx2.cc  hh_avx2.h  hh_buffer.h  hh_neon.cc  hh_neon.h  hh_portable.cc  hh_portable.h  hh_sse41.cc  hh_sse41.h  hh_types.h  hh_vsx.h  highway_tree_hash.cc  highway_tree_hash.h  highwayhash.h  highwayhash_fuzzer.cc  highwayhash_target.cc  highwayhash_target.h  highwayhash_test.cc  highwayhash_test_avx2.cc  highwayhash_test_neon.cc  highwayhash_test_portable.cc  highwayhash_test_sse41.cc  highwayhash_test_target.cc  highwayhash_test_target.h  highwayhash_test_vsx.cc  iaca.h  instruction_sets.cc  instruction_sets.h  (+42 more)
java/com/google/highwayhash/: HighwayHash.java  HighwayHashTest.java
msvc/: Benchmark.vcxproj  HighwayHash.sln  HighwayHash.vcxproj  NanobenchmarkExample.vcxproj  ProfilerExample.vcxproj  SipHashTest.vcxproj  VectorTest.vcxproj
